--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Generated files
 debug/
-/target/
+target/
 
 # The library shouldn't decide about the exact versions of
 # its dependencies, but let the downstream crate decide.
