--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@ target/
 # The library shouldn't decide about the exact versions of
 # its dependencies, but let the downstream crate decide.
 Cargo.lock
+
+
+# Added by cargo
+
+/target
+/Cargo.lock
+
+# AOC
+input.txt
